footer gap fixed

--- a/css/main.css
+++ b/css/main.css
@@ -660,6 +660,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .-translate-x-full {
   --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
